# netaio

./: .gitignore  AGENTS.md  TYPE_FIXES.md  asymmetric.md  changelog.md  dox.md  implementation_plan.md  progress.md  prompt.md  pyproject.toml  ralph.lock.json  readme.md  request.review.md  request_review_phase_2.md  requirements.txt  review.passed.md
.github/ISSUE_TEMPLATE/: release_checklist.md
.ralph/: state.json
.ralph/archive/: 1769313602.af002fb959557e82d9e3b5459d3738bb.state.json  1769313734.c3e71e2f208abc7c0f4195b2d21cfefe.implementation_plan.md  1769313734.c3e71e2f208abc7c0f4195b2d21cfefe.state.json  1769313802.c3e71e2f208abc7c0f4195b2d21cfefe.plan.review.md  1769313854.c3e71e2f208abc7c0f4195b2d21cfefe.implementation_plan.md  1769313889.c3e71e2f208abc7c0f4195b2d21cfefe.plan.review.md  1769313931.c3e71e2f208abc7c0f4195b2d21cfefe.implementation_plan.md  1769313984.c3e71e2f208abc7c0f4195b2d21cfefe.progress.md  (+12 more)
findings/: REPORT.md  decorators.py  deps_311.txt  deps_312.txt  final_summary.md  mypy_final.txt  phase_5_verification.md  pyright_final.txt  pyright_netaio_only.txt  target_feasibility_assessment.md  test_exact_pattern.py  test_minimal_server.py  test_pattern.py  test_phase_4_results.txt  test_readexactly.py  test_with_client.py
netaio/: __init__.py  asymmetric.py  auth.py  cipher.py  client.py  common.py  crypto.py  encryption.py  node.py  server.py  version.py
temp/: add_request_method.plan.md  add_timeout_handler.plan.md  pyversion_investigation.plan.md
tests/: test_e2e.py  test_misc.py  test_plugins.py  test_tcp_e2e.py  test_udp_e2e.py
(+1 files in other folders)
