[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netaio"
version = "0.0.0"
authors = [
  { name="k98kurz", email="k98kurz@gmail.com" },
]
description = "Simple asyncio TCP client and server library inspired by fastapi"
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: ISC License (ISCL)",
  "Operating System :: OS Independent",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.optional-dependencies]
tapescript = [
  "tapescript >= 0.6.2",
]

[project.urls]
"Homepage" = "https://github.com/k98kurz/netaio"
"Bug Tracker" = "https://github.com/k98kurz/netaio/issues"
